--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     <p class="text-slate-400 text-lg">ผลงานที่ภาคภูมิใจและการพัฒนาทักษะ</p>
                 </div>
                 <div class="hidden md:block text-right">
-                    <span class="text-cyan-500 font-mono text-xl">01 // 06</span>
+                    <span class="text-cyan-500 font-mono text-xl">01 // 07</span>
                 </div>
             </div>
             <div id="projects-container" class="grid md:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
@@ -374,6 +374,16 @@
             },
             {
                 id: 2,
+                title: "Ai-Powered CSV Social Media ",
+                category: "Web Development",
+                description: "ระบบ Dashboard สำหรับอ่านไฟล์ CSV ตกแต่งสวยงาม",
+                tech: ["Google App Script", "Google Sheets", "HTML/CSS", "JavaScript"],
+                detail: "พัฒนาเว็บไซต์โดยใช้ Google App Script เชื่อมต่อกับ CSV เป็น Database ผสมผสาน HTML/CSS/JAVA",
+                image: "https://i.postimg.cc/2yqVVV07/Screenshot-2026-02-14-190712-(1).png",
+                color: "from-gray-700 to-slate-600"
+            },
+            {
+                id: 3,
                 title: "AI-Powered Classroom Assistant",
                 category: "AI & Chatbot",
                 description: "ผู้ช่วยเสมือนจริงในชั้นเรียน ลดภาระการตอบคำถามซ้ำๆ ผ่าน LINE OA",
@@ -382,16 +392,7 @@
                 image: "https://i.postimg.cc/g0Q9VYXp/aisistant.png",
                 color: "from-purple-500 to-pink-400"
             },
-            {
-                id: 3,
-                title: "Football Team Management (eFHUB 25)",
-                category: "Simulation / Algorithm",
-                description: "แอปพลิเคชันจำลองสถานการณ์การบริหารทีมฟุตบอล เน้นการเขียน Algorithm",
-                tech: ["Algorithm Design", "Logic", "Simulation"],
-                detail: "ผู้ใช้งานรับบทเป็นผู้จัดการทีม วางแผน จัดตัวผู้เล่น และซื้อขายนักเตะ จุดเด่นคือการเขียน Algorithm ที่ซับซ้อนเพื่อจำลองผลลัพธ์การแข่งขันและตลาดนักเตะ",
-                image: "https://i.postimg.cc/FRKb0nCD/football.png",
-                color: "from-green-500 to-emerald-400"
-            },
+
             {
                 id: 4,
                 title: "IoT Smart Parking System",
@@ -421,6 +422,16 @@
                 detail: "แอปพลิเคชันสำหรับนักเขียนหรือผู้ต้องการไอเดีย สุ่มประโยค Story Prompt พัฒนาจนสามารถนำขึ้น PlayStore ได้จริง",
                 image: "https://i.postimg.cc/MpTs858g/storyprompt.png",
                 color: "from-indigo-500 to-violet-400"
+            },
+            {
+                id: 7,
+                title: "Football Team Management (eFHUB 25)",
+                category: "Simulation / Algorithm",
+                description: "แอปพลิเคชันจำลองสถานการณ์การบริหารทีมฟุตบอล เน้นการเขียน Algorithm",
+                tech: ["Algorithm Design", "Logic", "Simulation"],
+                detail: "ผู้ใช้งานรับบทเป็นผู้จัดการทีม วางแผน จัดตัวผู้เล่น และซื้อขายนักเตะ จุดเด่นคือการเขียน Algorithm ที่ซับซ้อนเพื่อจำลองผลลัพธ์การแข่งขันและตลาดนักเตะ",
+                image: "https://i.postimg.cc/FRKb0nCD/football.png",
+                color: "from-green-500 to-emerald-400"
             }
         ];
 
